[package]
name = "md"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause-Patent"

[dependencies]
inquire = "0.6.2"
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.5"
humansize = "2.1"
dirs = "5.0"
